--- a/dollar-plugins/dollar-mapdb-plugin/pom.xml
+++ b/dollar-plugins/dollar-mapdb-plugin/pom.xml
@@ -43,9 +43,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mapdb</groupId>
-            <artifactId>mapdb</artifactId>
-            <version>3.0.5</version>
+            <groupId>com.sillelien</groupId>
+            <artifactId>dollar-mapdb</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
