--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -62,6 +62,8 @@
                             <exclude>log4j:log4j:jar:</exclude>
                             <exclude>org.slf4j:slf4j-api</exclude>
                             <exclude>org.slf4j:slf4j-log4j12</exclude>
+                            <exclude>com.sillelien:dollar-mapdb</exclude>
+
                         </excludes>
                     </artifactSet>
                     <filters>
@@ -75,7 +77,7 @@
                                 <exclude>META-INF/*.RSA</exclude>
                                 <exclude>META-INF/*.INF</exclude>
                                 <exclude>com.google.common.**</exclude>
-                                <exclude>org.mapdb:mapdb</exclude>
+                                <exclude>dollar.internal.**</exclude>
                                 <!--<exclude>META-INF/license</exclude>-->
                             </excludes>
                         </filter>
