--- a/dollar-mapdb/pom.xml
+++ b/dollar-mapdb/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dollar-mapdb</artifactId>
-
+    <version>LATEST</version>
     <dependencies>
         <dependency>
             <groupId>org.mapdb</groupId>
