--- a/dollar-plugins/dollar-mapdb-plugin/pom.xml
+++ b/dollar-plugins/dollar-mapdb-plugin/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.sillelien</groupId>
             <artifactId>dollar-mapdb</artifactId>
-            <version>${project.version}</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 
