--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -148,6 +148,7 @@
                             <exclude>org.slf4j:slf4j-api</exclude>
                             <exclude>org.slf4j:slf4j-log4j12</exclude>
                             <exclude>con.sillelien:dollar-mapdb</exclude>
+                            <exclude>con.sillelien:dollar-camel</exclude>
                         </excludes>
                     </artifactSet>
                     <filters>
