--- a/dollar-plugins/dollar-camel-plugin/pom.xml
+++ b/dollar-plugins/dollar-camel-plugin/pom.xml
@@ -40,9 +40,8 @@
             <groupId>com.sillelien</groupId>
             <artifactId>dollar-camel</artifactId>
             <version>0.1.20</version>
+            <scope>provided</scope>
         </dependency>
-
-
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
