--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
 
         - run:
             name: init
-            command: ~/build-init.sh
+            command: /home/circleci/.build-init.sh
 
         - run:
             name: dependencies
@@ -48,7 +48,7 @@ jobs:
 
         - run:
             name: init
-            command: ~/build-init.sh
+            command: /home/circleci/.build-init.sh
 
         - run:
             name: promote
@@ -66,7 +66,7 @@ jobs:
 
         - run:
             name: init
-            command: ~/build-init.sh
+            command: /home/circleci/.build-init.sh
 
         - run:
             name: deploy
@@ -125,7 +125,7 @@ jobs:
 
         - run:
             name: init
-            command: ~/build-init.sh
+            command: /home/circleci/.build-init.sh
 
         - run:
             name: build-docs
@@ -197,7 +197,7 @@ jobs:
 
         - run:
             name: init
-            command: ~/build-init.sh
+            command: /home/circleci/.build-init.sh
 
         - run:
             name: prep
