--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,6 +236,8 @@ jobs:
       steps:
 
         - checkout
+        
+        - setup_remote_docker
 
         - attach_workspace:
             at: dist/dollar
