--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             </dependency>
             <dependency>
                 <groupId>com.sillelien</groupId>
+                <artifactId>github-api</artifactId>
+                <version>0.1.48</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sillelien</groupId>
                 <artifactId>java-as-script</artifactId>
                 <version>0.9.139</version>
             </dependency>
