--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
         - restore_cache:
             keys:
-              - m2-{{ .Branch }}-{{ checksum pom.xml }}
+              - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
               - m2
 
         - run:
@@ -33,7 +33,7 @@ jobs:
             command: ~/build-utils/maven_make_deps.sh
 
         - save_cache:
-            key: m2-{{ .Branch }}-{{ checksum pom.xml }}
+            key: m2-{{ .Branch }}-{{ checksum "pom.xml" }}
             paths:
               - ~/.m2
 
@@ -68,7 +68,7 @@ jobs:
 
         - restore_cache:
             keys:
-              - m2-{{ .Branch }}-{{ checksum pom.xml }}
+              - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
               - m2
 
         - run:
@@ -80,7 +80,7 @@ jobs:
             command: ./deploy-maven.sh
 
         - save_cache:
-            key: m2-{{ .Branch }}-{{ checksum pom.xml }}
+            key: m2-{{ .Branch }}-{{ checksum "pom.xml" }}
             paths:
                 - ~/.m2
 
@@ -129,7 +129,7 @@ jobs:
 
         - restore_cache:
             keys:
-              - m2-{{ .Branch }}-{{ checksum pom.xml }}
+              - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
               - m2
 
         - run:
@@ -149,7 +149,7 @@ jobs:
               - dist
 
         - save_cache:
-            key: m2-{{ .Branch }}-{{ checksum pom.xml }}
+            key: m2-{{ .Branch }}-{{ checksum "pom.xml" }}
             paths:
                 - ~/.m2
 
@@ -200,7 +200,7 @@ jobs:
 
         - restore_cache:
             keys:
-                - m2-{{ .Branch }}-{{ checksum pom.xml }}
+                - m2-{{ .Branch }}-{{ checksum "pom.xml" }}
                 - m2
 
         - run:
@@ -229,7 +229,7 @@ jobs:
             command: ./deploy-dist.sh
 
         - save_cache:
-            key: m2-{{ .Branch }}-{{ checksum pom.xml }}
+            key: m2-{{ .Branch }}-{{ checksum "pom.xml" }}
             paths:
                 - ~/.m2
 
